# FPGA_expms

./: .gitignore  .gitlab-ci.yml  .gitlab.yml  .gitmodules  CHANGELOG  CMakeLists.txt  Readme.md
api/: CMakeLists.txt
api/include/: bare.h
api/src/: bare.c  opencl_utils.c
docs/batchPCIeTransfers/: nb_event_pcietest  nb_pcietest
docs/batchPCIeTransfers/prof_nb_event_pcietest/512cube_c3_i2/: profile.json  profile.mon
docs/batchPCIeTransfers/prof_nb_pcietest/512cube_c3_i2/: profile.json  profile.mon
docs/pcieRdLoss/: PCIeRDLossComparison.csv  README.md
docs/pcieRdLoss/19.4_hpc/: pcie_rd_newdata_newmem.csv  pcie_rd_newdata_samemem.csv  pcie_rd_reusedata_samemem.csv  pcie_wr_newdata_newmem.csv  pcie_wr_newdata_samemem.csv  pcie_wr_reusedata_samemem.csv
expms/: CMakeLists.txt  nb_event_pcietest.c  nb_pcietest.c  new_data.c  newdata_newmem.c  newdata_newmem_samedevbuf.c  newdata_samemem.c  newdata_samemem_samedevbuf.c  reusedata_samemem.c
expms/common/: helper.c  helper.h
kernels/: CMakeLists.txt
kernels/cmake/: genKernelTargets.cmake
kernels/empty/: CMakeLists.txt
